--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
 	<h1>All the power is with you.You can do anything and everything</h1>
+	<h2>Added a new line in dev branch</h2>
 </body>
 </html>
