--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 	<h1>All the power is with you.You can do anything and everything</h1>
-	<h2>Added a new line in</h2>
+	<h2>Added a new line in dev and fixed the bug</h2>
 </body>
 </html>
